<resources>
    <string name="app_name">Symphonica</string>
    <string name="icon_description">Icon</string>
    <string name="initial_timer">0:00</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat_song">Repeat</string>
    <string name="item_theme">Select Themes:</string>
    <string name="default_theme">Default Theme</string>
    <string name="item_light_theme">Light Theme</string>
    <string name="item_dark_theme">Dark Theme</string>
    <string name="item_tags">Update Tags</string>
    <string name="item_favourites">Add to Favourites</string>
    <string name="item_about">About</string>
    <string name="item_sort">Sort List:</string>
    <string name="item_sort_by_default">Sort by Default</string>
    <string name="item_sort_by_artist">Sort by Artist</string>
    <string name="item_sort_by_title">Sort by Title</string>
    <string name="item_select_songs_list">Select Songs List:</string>
    <string name="item_select_all_songs_list">All Songs</string>
    <string name="item_select_favourite_songs_list">Favourite Songs</string>
    <string name="footer_text">Arturro Torres | Galway Flame</string>
</resources>
