<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MusicListActivity">

    <group
        android:id="@+id/group_sort">
        <item
            android:id="@+id/item_sort"
            android:title="@string/item_sort"
            app:showAsAction="ifRoom">
            <menu>
                <item
                    android:id="@+id/item_sort_by_default"
                    android:title="@string/item_sort_by_default"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/item_sort_by_artist"
                    android:title="@string/item_sort_by_artist"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/item_sort_by_title"
                    android:title="@string/item_sort_by_title"
                    app:showAsAction="never" />
            </menu>
        </item>
    </group>
</menu>